# kanye_rest

./: LICENSE  README.md  pyproject.toml
src/kanye_rest/: __init__.py  main.py
